# yolov8-deepsort-fast

./: .gitignore  FSM.py  displayvideo.py  export-onnx.py  main.py  myReadme.md  nav_client.py  realsense.ipynb  report.docx  tracking.py  train.py
c++yolo/: CMakeLists.txt  feature.onnx  main.cpp
c++yolo/YOLOv8-OpenVINO-CPP-Inference/: CMakeLists.txt  inference copy.cc  inference.cc  main.cc
c++yolo/YOLOv8-OpenVINO-CPP-Inference/include/: inference.h
c++yolo/detector/YOLOv5/src/: inference.cpp  main.cpp
checkpoint/: ckpt.t8
cpp/: main copy.cc  main.cc
deep_sort/deep_sort/: deep_sort.py
deep_sort/deep_sort/deep/: feature_extractor.py  ghost_net.py  new_train.py  shufflenet.py
deep_sort/deep_sort/sort/: nn_matching.py  track.py  tracker.py
gesture_ncnn_model/: metadata.yaml  model_ncnn.py
handdetect/: export_ncnn.py  extract_img.py  get_dataset.py  handdetect.py  paperrs.pt  yolov8n.pt
handdetect/best_openvino_model/: best.xml  metadata.yaml
handdetect/gesture-1/: README.dataset.txt  README.roboflow.txt  data.yaml
handdetect/gesture_ncnn_model/: metadata.yaml  model.ncnn.param
handdetect/metrics/train1/: args.yaml  events.out.tfevents.1730895717.186c54ac0029.1648.0  model_artifacts.json  results.csv
handdetect/metrics/train4/: args.yaml  events.out.tfevents.1730900627.186c54ac0029.22386.0  results.csv
models/: dynamic_quantized.onnx
rospkg/: FSM.py  localplan.py  tracking.py
rospkg2/: FSM.py  tracking.py
yolov8n_int8_openvino_model/: metadata.yaml  yolov8n.xml
yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
(+739 files in other folders)
